Alterar variáveis de ambiente

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SECRET=KLJFADJKFBDKFBDKJ
+MAIL_HOST=smtp.sendgrid.net
+API_PASSWORD=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
 MAIL_USER=Admsagradoneon@gmail.com
