--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.21.0",
     "googleapis": "^144.0.0",
     "hbs": "^4.2.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.2",
     "nodemailer": "^6.9.15",
